...
        IconButton(
            enabled = canGoBack,
            onClick = onRemoveClicked
        ) {
            Icon(
                imageVector = Icons.Default.Remove,
                contentDescription = "Remove"
            )
        }

        Spacer(modifier = Modifier.height(4.dp))

        Surface(
...

        IconButton(
            onClick = onAddClicked
        ) {
            Icon(
                imageVector = Icons.Default.Add,
                contentDescription = "Add"
            )
        }
    }
}

@Preview(
...
